test/valid/for-in.js
var arr = ['a','b'];

var i = '';
for (i in arr) {

}
