test/invalid/for.js
for (var i = 2; i; i = 3) {
    3;
}
